# SimpleCiscoTUI

./: .gitignore  CLAUDE.md  README.md  config.example.toml  pyproject.toml  requirements.txt
scripts/: run.sh  screenshot.py  test.sh
simpleciscotui/: __init__.py  app.py  app.tcss  cisco.py  config.py
tests/: test_cisco.py  test_config.py
